--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
 <span class="logo-icon">⬡</span>
 <h1>EON <span class="accent">WALLET</span></h1>
 </div>
+<div class="wallet-switcher">
+<button id="walletSwitcherBtn" class="wallet-switcher-btn">
+<span class="wallet-switcher-icon">⬢</span>
+<span id="currentWalletName">No Wallet</span>
+<span class="wallet-switcher-arrow">▾</span>
+</button>
+<div id="walletDropdown" class="wallet-dropdown" style="display:none;">
+<div id="walletList" class="wallet-list"></div>
+<div class="wallet-dropdown-actions">
+<button id="addWalletBtn" class="btn btn-primary btn-small">+ Add Wallet</button>
+</div>
+</div>
+</div>
 <div class="network-status">
 <span class="status-indicator" id="statusIndicator"></span>
 <span class="status-text">DEVNET</span>
@@ -129,25 +142,24 @@ Copy Address
 <h2>Settings</h2>
 </div>
 <div class="settings-section">
-<h3>Wallet</h3>
+<h3>Wallets</h3>
+<div id="walletManagementList"></div>
+</div>
+<div class="settings-section">
+<h3>ZK Proof System (SRS Files)</h3>
 <div class="setting-item">
 <div class="setting-info">
-<div class="setting-label">Wallet File</div>
-<div class="setting-desc">Import or create wallet</div>
+<div class="setting-label">SRS Status</div>
+<div class="setting-desc" id="srsStatus">Checking...</div>
 </div>
 <div class="setting-actions">
-<button id="createWalletBtn" class="btn btn-primary btn-small">Create New</button>
-<button id="importWalletBtn" class="btn btn-secondary btn-small">Import</button>
+<button id="uploadSRSBtn" class="btn btn-primary btn-small">Upload SRS Files</button>
+<button id="clearSRSBtn" class="btn btn-danger btn-small" style="display:none;">Clear SRS</button>
 </div>
 </div>
-<div class="setting-item">
-<div class="setting-info">
-<div class="setting-label">Export Wallet</div>
-<div class="setting-desc">Download wallet configuration</div>
-</div>
-<div class="setting-actions">
-<button id="exportWalletBtn" class="btn btn-secondary btn-small">Export</button>
-</div>
+<div id="srsFileList" class="setting-desc" style="margin-top: 10px;"></div>
+<div class="form-hint" style="margin-top: 10px;">
+Required files: <strong>SRS.CK.BIN</strong> and <strong>SRS.LK.9.BIN</strong> (found in ~/.cache/eon/ after running eoncli)
 </div>
 </div>
 <div class="settings-section">
@@ -162,20 +174,21 @@ Copy Address
 </div>
 </div>
 </div>
-<div class="settings-section">
-<h3>Security</h3>
-<div class="setting-item">
-<div class="setting-info">
-<div class="setting-label">Clear Wallet</div>
-<div class="setting-desc">Remove wallet from browser</div>
-</div>
-<div class="setting-actions">
-<button id="clearWalletBtn" class="btn btn-danger btn-small">Clear</button>
-</div>
-</div>
-</div>
 </template>
 </div>
+<script src="srs-manager.js"></script>
+<script src="srs-ui.js"></script>
+<script src="go-wasm-loader.js"></script>
+<script src="wasm.js"></script>
 <script src="index.js"></script>
+<script>
+// Override setupSettings to include SRS management
+const originalSetupSettings = window.setupSettings || function() {};
+window.setupSettings = function() {
+    renderWalletManagement();
+    document.getElementById('changeEndpointBtn').addEventListener('click', changeEndpoint);
+    setupSRSManagement();
+};
+</script>
 </body>
 </html>
