--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ Send Transaction
 </div>
 <div id="srsFileList" class="setting-desc" style="margin-top: 10px;"></div>
 <div class="form-hint" style="margin-top: 10px;">
-Required files: <strong>SRS.CK.BIN</strong> and <strong>SRS.LK.BIN</strong>. Files will be auto-downloaded on first load.
+Required files: <strong>SRS.CK.BIN</strong> and <strong>SRS.LK.9.BIN</strong>. Files will be auto-downloaded on first load.
 </div>
 </div>
 <div class="settings-section">
